    Of interest to template creators:

    * Local includes can now be made using <?imcms:include path="/relative/to/context/path"?>.
      These don't require a http-request to localhost as url-includes do, are a magnitude more efficient,
      and don't spam the access-log. (Bug 2684)
    * Jakarta Velocity can now be used in templates, between "<?imcms:velocity?> ... <?/imcms:velocity?>" tags.
      Right now the httpservletrequest and the httpservletresponse can be accessed,
      with "$request" and "$response" respectively, almost just like in JSP. (Bug 2668)
    * Attributes "pre" and "post" can now be used on "<?imcms:menu?>". (Bonus from refactorings in bug 2668.)
    * Attribute "defaulttemplate" can now be used on "<?imcms:menu?>". It should contain the name of a template
      to use for new text documents.
    * New attribute for <?imcms:menu?> tag: "defaulttemplate" - specify the name of a template to use for
      new text documents created in this menu. (Bug 2689)
    * Added a "TEMPLATE_SYNTAX.TXT" file containing a basic reference to the template tags. (Bug 2689)
    * New attribute for <?imcms:text?> tag: "formats" - specify what editor modes are available.

    Of interest to administrators:

    * When something went wrong during initialization, a useless generic "NoClassDefFoundError" was given. (Bug 2669)
    * Certain html files were not viewable in the file manager. (Bug 2661)
    * Fixed a problem in the "diff-1.10.2-1.11.sql" database upgrade script. (Bug 2692)
    * Fixed an error when trying to edit a user. (Bug 2696)
    * Make sure a useradmin only can list users he can edit. (Bug 2757)
    * Sometimes when using the file administrator, some files would be unremovable.
      Trying to remove them will now give a rather nasty error message instead of failing silently.
      This still needs improvement. (Bug 2442)
    * The link checker is now multithreaded, and one can choose to list only broken links. (Bug 2587)